Add sentry, command and twig-extension

--- a/templates/questions/show.html.twig
+++ b/templates/questions/show.html.twig
@@ -14,7 +14,7 @@
 
 
         <a href="" class="btn btn-danger my-5">Delete...</a>
-        <p>{{ question_text|markdown }}</p>
+        <p>{{ question_text|markdown_cached }}</p>
 
 
 
