--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -14,17 +14,16 @@
     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" action="{{ path('search_question') }}">
         <input type="search" class="form-control form-control-dark" placeholder="Search..." name="s" aria-label="Search" value="{{ app.request.query.get('s') | default('') }}">
     </form>
-    {% for question in questions %}
-    <a class="q-title" href="{{ path('app_show', { slug: question.slug }) }}"><h2>{{ question.name }}</h2></a>
-
-    <div class="q-display p-3">
-        <i class="fa fa-quote-left mr-3"></i>
-        <p class="d-inline">
-            {{ question.question }}
-        </p>
-        <p>Francis, <cite title="Source Title">{{ question.askedAt|ago }}</cite></p>
-    </div>
+    <a href="{{ path('app_product_create') }}" class="btn btn-primary">
+            + Créer un produit
+     </a>
+    <section class="section-products">
+		<div class="card-group">
+    {% for product in products %}
+            {% include 'home/partials/product.html.twig' %}
     {% endfor %}
+        </div>
+
 
 {% endblock %}
 
