--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -5,7 +5,12 @@
 {% block body %}
     <div class="container center">
         <h1>Créer un produit</h1>
-        {{ form_start(createProductForm, {'attr': {'class': 'row'}}) }}
+        {{ form_start(createProductForm, {'attr': {'class': 'form-horizontal'}}) }}
+
+        <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
+            {{ form_widget(createProductForm.images, {'attr': {'placeholder': 'Images'}}) }}
+            <span class="error">{{ form_errors(createProductForm.images) }}</span>
+        </div>
         <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
             {{ form_widget(createProductForm.name, {'attr': {'placeholder': 'Titre'}}) }}
             <span class="error">{{ form_errors(createProductForm.name) }}</span>
