--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -5,6 +5,10 @@
 {% block body %}
     <li><a href="{{ path('app_homepage') }}" class="nav-link px-2 text-secondary">Home</a></li>
     <div class="card" style="width: 20%;">
+        {% for image in images %}
+            <img src="{{ vich_uploader_asset(image, 'imageFile') }}">
+        {% endfor %}
+
         <img class="card-img-top" src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">{{ product.name }}</h5>
