--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,13 @@
                   crossorigin="anonymous">
 
         {% endblock %}
+        <style>
+            .filter {
+                display: block;
+                position: sticky;
+                top: 20px;
+            }
+        </style>
 
 
     </head>
