--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -11,18 +11,31 @@
         <li><a href="/login">Login</a></li>
     {% endif %}
     <h1>Home</h1>
-    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" action="{{ path('search_question') }}">
-        <input type="search" class="form-control form-control-dark" placeholder="Search..." name="s" aria-label="Search" value="{{ app.request.query.get('s') | default('') }}">
-    </form>
+
     <a href="{{ path('app_product_create') }}" class="btn btn-primary">
-            + Créer un produit
-     </a>
-    <section class="section-products">
-		<div class="card-group">
-    {% for product in products %}
-            {% include 'home/partials/product.html.twig' %}
-    {% endfor %}
+        + Créer un produit
+    </a>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                {% include 'home/partials/filter.html.twig' with {form: form} only %}
+            </div>
+            <div class="col-md-9">
+                <div class="card-group">
+                    {% if products is not empty %}
+                        {% for product in products %}
+                            {% include 'home/partials/product.html.twig' with {product: product} only%}
+                        {% endfor %}
+                    {% else %}
+                        <h4>Aucun produit trouvé !</h4>
+                    {% endif %}
+                </div>
+            </div>
         </div>
+    </div>
+
+
+
 
 
 {% endblock %}
