--- a/templates/home/partials/product.html.twig
+++ b/templates/home/partials/product.html.twig
@@ -1,5 +1,11 @@
 <div class="card" style="width: 20%;">
-    <img class="card-img-top" src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg" alt="Card image cap">
+
+    {% set imageProduct = product.images.first %}
+    {% set imagesProd = product.images.getValues %}
+    {% for image in product.images|slice(0,1) %}
+    <img class="card-img-top" src="{{ vich_uploader_asset(image, 'imageFile') }}" alt="Card image cap">
+    {% endfor %}
+
     <div class="card-body">
         <h5 class="card-title">{{ product.name }}</h5>
         <p class="card-text">{{ product.description }}</p>
