--- a/templates/home/homepage.html.twig
+++ b/templates/home/homepage.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    {% if app.user %}
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <li><a href="{{ path('app_profil', { id: app.user.id }) }}">profil</a></li>
         <li><a href="/logout">Logout</a></li>
     {% else %}
@@ -14,9 +14,11 @@
 
     <h1>Home</h1>
 
-    <a href="{{ path('app_product_create') }}" class="btn btn-primary">
-        + Créer un produit
-    </a>
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <a href="{{ path('app_product_create') }}" class="btn btn-primary">
+            + Créer un produit
+        </a>
+    {% endif %}
     <div class="container">
         <div class="row">
             <div class="col-md-3">
