--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -3,15 +3,17 @@
 {% block title %}Create Product{% endblock %}
 
 {% block body %}
-    <div class="container center">
-        <h1>Créer un produit</h1>
-        <form method="post" enctype="multipart/form-data">
+    <div class="container center card" style="margin-top: 9%">
+        <div class="text-center">
+            <h1 class="mb-5 mt-5">Créer un produit</h1>
+        </div>
+        <form method="post" enctype="multipart/form-data" class="w-50 m-auto">
 
-        {{ form_start(createProductForm, {'attr': {'class': 'form-horizontal'}}) }}
+            {{ form_start(createProductForm, {'attr': {'class': 'form-horizontal'}}) }}
 
             <ul id="product-images-fields-list"
                 data-prototype="{{ form_widget(createProductForm.images.vars.prototype)|e }}"
-                data-widget-tags="{{ '<li></li>'|e }}"
+                data-widget-tags="{{ '<li style="list-style:none;"></li>'|e }}"
                 data-widget-counter="{{ form_widget(createProductForm.images)|length }}"
             >
                 {% for productImageForm in createProductForm.images %}
@@ -20,35 +22,41 @@
                 {% endfor %}
 
             </ul>
+            <div class="text-center">
+                <button type="button"
+                        class="add-another-collection-widget btn btn-secondary mb-2"
+                        data-list-selector="#product-images-fields-list">Add another Product Image
+                </button>
+            </div>
 
-            <button type="button"
-                    class="add-another-collection-widget"
-                    data-list-selector="#product-images-fields-list">Add another Product Image</button>
+            <div class="input-field col s12 m6 l6 offset-m3 offset-l3 mb-2">
+                {{ form_widget(createProductForm.name, {'attr': {'placeholder': 'Titre'}}) }}
+                <span class="error">{{ form_errors(createProductForm.name) }}</span>
+            </div>
+            <div class="input-field col s12 m6 l6 offset-m3 offset-l3 mb-2">
+                {{ form_widget(createProductForm.price, {'attr': {'placeholder': 'Prix'}}) }}
+                <span class="error">{{ form_errors(createProductForm.price) }}</span>
+            </div>
+            <div class="input-field col s12 m6 l6 offset-m3 offset-l3 mb-2">
+                {{ form_widget(createProductForm.description, {'attr': {'placeholder': 'Description'}}) }}
+                <span class="error">{{ form_errors(createProductForm.description) }}</span>
+            </div>
 
-        <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-            {{ form_widget(createProductForm.name, {'attr': {'placeholder': 'Titre'}}) }}
-            <span class="error">{{ form_errors(createProductForm.name) }}</span>
-        </div>
-        <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-            {{ form_widget(createProductForm.price, {'attr': {'placeholder': 'Prix'}}) }}
-            <span class="error">{{ form_errors(createProductForm.price) }}</span>
-        </div>
-        <div class="input-field col s12 m6 l6 offset-m3 offset-l3">
-            {{ form_widget(createProductForm.description, {'attr': {'placeholder': 'Description'}}) }}
-            <span class="error">{{ form_errors(createProductForm.description) }}</span>
-        </div>
-            <ul class="tags" data-index="{{ createProductForm.tags|length > 0 ? createProductForm.tags|last.vars.name + 1 : 0 }}"
+            <ul class="tags"
+                data-index="{{ createProductForm.tags|length > 0 ? createProductForm.tags|last.vars.name + 1 : 0 }}"
                 data-prototype="{{ form_widget(createProductForm.tags.vars.prototype)|e }}">
                 {% for tag in createProductForm.tags %}
                     <li>{{ form_row(tag.libelle) }}</li>
                 {% endfor %}
 
             </ul>
-            <button type="button" class="add_item_link" data-collection-holder-class="tags">Add a tag</button>
-        <div class="input-field col s12">
-            <input type="submit" name="" class="btn btn-primary" value="Enregistrer">
-        </div>
-        {{ form_end(createProductForm) }}
+
+
+            <button type="button" class="add_item_link btn btn-secondary mb-2" data-collection-holder-class="tags">Add a tag</button>
+            <div class="input-field col s12 text-center">
+                <input type="submit" name="" class="btn btn-primary" value="Enregistrer">
+            </div>
+            {{ form_end(createProductForm) }}
     </div>
 {% endblock %}
 {% block javascripts %}
