--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -6,11 +6,12 @@
 
 {% block body %}
 
-    <h1>Users</h1>
+
 
 
     <div class="container">
-        <div class="row">
+        <h1 class="mt-4">Users</h1>
+        <div class="row mt-4">
             <div class="col-md-12">
                 <div class="card-group">
                     {% if users is not empty %}
