--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}
+    Profil de {{ user.firstname }} {{ user.lastname }}
+{% endblock %}
 {% block body %}
     <div class="container">
         <div class="main-body">
-            <div class="row">
+            <div class="row mt-4">
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="card-body">
@@ -24,7 +26,7 @@
                                     {% endif %}
 
                                     {% if is_granted('ROLE_ADMIN') and app.user.id != user.id%}
-                                        <a href="{{ path('app_user_delete', {'id': user.id}) }}" class="btn btn-danger">
+                                        <a href="{{ path('app_user_delete', {'id': user.id}) }}" class="btn btn-danger mt-2">
                                             Supprimer l'utilisateur
                                         </a>
 
@@ -91,7 +93,7 @@
                     </div>
                 </div>
             </div>
-
+            <h4>Les produits de {{ user.firstname }}</h4>
             <div class="row">
                 {% for product in user.products %}
                     <div class="d-flex flex-wrap">
