--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -8,9 +8,21 @@
         <div class="card-header">
             <small class="text-muted">Dernière mise à jour : {{ product.publishedAt|ago }}</small>
         </div>
-        {% for image in images %}
-            <img src="{{ vich_uploader_asset(image, 'imageFile') }}">
-        {% endfor %}
+
+
+        <div class="slider">
+            <div class="swiper">
+                <div class="swiper-wrapper" id="swiper">
+                    {% for image in images %}
+                        {% include 'product/partials/image.html.twig' with {image: image} only%}
+                    {% endfor %}
+                </div>
+
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </div>
+
 
 
         <div class="card-body">
@@ -80,8 +92,16 @@
 
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="{{ asset('css/swiper.css') }}" rel="stylesheet">
+{% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/vote_user.js') }}"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="{{ asset('js/swiper.js') }}"></script>
 {% endblock %}
 
